changed version to match underlying geoserver version, and tweaked root pom to include spring dependency management, and some properites for test memory