@@ -8,8 +8,8 @@
   <groupId>org.opengeo</groupId>
   <artifactId>geoserver-exts</artifactId>
   <packaging>pom</packaging>
-  <version>2.1-SNAPSHOT</version>
-  <name>OpenGeo Geoserver Extensions</name>
+  <version>2.2-SNAPSHOT</version>
+  <name>OpenGeo GeoServer Extensions</name>
 
   <organization>
     <name>OpenGeo</name>
@@ -104,7 +104,7 @@
             <exclude>${test.exclude.pattern}</exclude>
           </excludes>
           <forkMode>once</forkMode>
-          <argLine>-Xmx${test.maxHeapSize} -enableassertions -Djava.awt.headless=${java.awt.headless}</argLine>
+          <argLine>-Xmx${test.maxHeapSize} -XX:MaxPermSize=${test.maxPermSize} -enableassertions -Djava.awt.headless=${java.awt.headless}</argLine>
           <printSummary>true</printSummary>
           <testFailureIgnore>${allow.test.failure.ignore}</testFailureIgnore>
         </configuration>
@@ -132,6 +132,26 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-expression</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+      <version>${spring.version}</version>
+   </dependency>
       <dependency>
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>jetty</artifactId>
@@ -262,7 +282,7 @@
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
-        <version>1.3.2</version>
+        <version>2.1</version>
       </dependency>
       <dependency>
         <groupId>commons-fileupload</groupId>
@@ -308,23 +328,17 @@
   </modules>
 
   <properties>
-
-    <gs.version>2.1-SNAPSHOT</gs.version>
-    <gt.version>2.7.4</gt.version>
-    <gwc.version>1.2.6</gwc.version>
-
-<!--
     <gs.version>2.2-SNAPSHOT</gs.version>
     <gt.version>8-SNAPSHOT</gt.version>
-    <gwc.version>1.3-RC3</gwc.version>
--->
-
+    <spring.version>3.1.1.RELEASE</spring.version>
+    <spring.security.version>3.1.0.RELEASE</spring.security.version>
     <jetty.version>6.1.8</jetty.version>
     <ant.version>1.6.5</ant.version>
     <dashboard.version>1.0.0</dashboard.version>
     <build.profile></build.profile>
     <build.revision>${project.version}</build.revision>
-    <test.maxHeapSize>2G</test.maxHeapSize>
+    <test.maxHeapSize>512M</test.maxHeapSize>
+    <test.maxPermSize>128M</test.maxPermSize>
   </properties>
 
 </project>
